syntax = "proto3";
import "include/any.proto";
option java_package = "com.roje.game.message.inner_message";
option java_multiple_files = true;

message InnerMessage{
    int64 uid = 1;
    google.protobuf.Any data = 2;
}
